MacViews: Handle IME engines that -insertNewLine: when confirming compositions.

r593766 added logic to suppress accelerator key handling when an IME merely
dismisses its candidate window on a Return keypress. The suppression only
occurs when there is marked text.

This doesn't handle two cases:
 - IME that marks text, but has no candidate window to dismiss (e.g. Korean).
 - IME that does _not_ mark text (and has no candidate window), but re-sends
   the entire composition rather than a single character (e.g. Telex).

r593766 didn't regress these cases - it just did nothing to improve them.

These new IME cases both invoke -insertNewLine: at the end of their
-insertText:replacementRange: operations. Fortunately, the case fixed in
r593766 (_with_ a candidate window) that needs its keyEvent suppressed
does _not_ invoke -insertNewLine:.

So, to ensure we process accelerators whenever an IME (or something else) would
explicitly call -insertNewLine: (or insertTab:, etc.), we flag this, and
"resurrect" the keyEvent if it was suppressed (for any reason).

Change-Id: I7e5cf6e6b7bc9285a7af10e9a2eecadbfcc0ae6f
Bug: 890190
Reviewed-on: https://chromium-review.googlesource.com/c/1239955
Reviewed-by: ccameron <ccameron@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598540}
Former-commit-id: a0d8e67e49b985becf1a297795202acaf8e5881c